Toegevoegd Elk en tom model

--- a/Portfolio-Camiel-Nijman.html
+++ b/Portfolio-Camiel-Nijman.html
@@ -216,8 +216,8 @@
                     <div class="column-content">
                         <div class="box-lowerimg">
                             <a href="images/CamielN/business_model_canvas.jpg">
-                                <img src="images/CamielN/business_model_canvas.jpg" alt="business_model_canvas" height="700px"
-                                    width="900px">
+                                <img src="images/CamielN/business_model_canvas.jpg" alt="business_model_canvas"
+                                    height="700px" width="900px">
                             </a>
                             <h6>Waardepropositie</h6>
                             <blockquote>
@@ -242,16 +242,61 @@
                                 </p>
                             </blockquote>
                         </div>
-                        <div class="box-onlytext">
-                            <h6>waarderealisatie</h6>
+                        <div class="box-lowerimg">
+                            <a href="images/CamielN/tom_model.jpeg">
+                                <img src="images/CamielN/tom_model.jpeg" alt="tom_model" height="700px" width="900px">
+                            </a>
+                            <h6>Waarderealisatie</h6>
                             <blockquote>
                                 <p>
-                                    
+                                    Als vervolg op de waardepropositie workshop zijn we bezig geweest met de
+                                    waarderealisatie workshop. In deze workshop zijn we begeleid door Paul Kalis die het
+                                    Target Operating Model (TOM) heeft ontwikkeld. Dit is een model waarin je een
+                                    organisatie van mens, methode en machine over 3 lagen moet bekijken namelijk
+                                    strategisch, tactisch en operationeel. Dit kun je gebruiken om beter inzicht te
+                                    krijgen in een bedrijf en om te controleren dat op alle lagen de relaties met elkaar
+                                    kloppen. Vervolgens hebben wij dit model toegepast op het bedrijf van ons project
+                                    namelijk Smart Impact Solutions. Toen we dit aan het invullen waren kwamen we er al
+                                    gauw achter dat we op sommige vlakken niet genoeg af wisten van het bedrijf en de
+                                    klant. De punten waar we nog vragen over hadden hebben we vervolgens ook mee kunnen
+                                    nemen in de gesprekken met Pieter om zo het Economische onderdeel van ons
+                                    onderzoeksrapport uit te kunnen werken.
                                 </p>
                             </blockquote>
                         </div>
-                        <div class="box-onlytext">
+                        <div class="box-lowerimg">
+                            <a href="images/CamielN/elk_sticky_notes.jpeg">
+                                <img src="images/CamielN/elk_sticky_notes.jpeg" alt="elk_sticky_notes" height="700px"
+                                    width="900px">
+                            </a>
                             <h6>Elk</h6>
+                            <blockquote>
+                                <p>
+                                    Om een idee te krijgen wat smart-industry nu daadwerkelijk brengt voor een
+                                    bedrijf zijn we uitgenodigd voor een rondleiding bij ELK. ELK is namelijk een
+                                    bedrijf dat werkt met een methode die zij “geen gedoe” noemen dat een mix is van
+                                    lean en scrum. Ik heb zelf vaak gewerkt met scrum en andere agile methodieken,
+                                    maar ik had eerlijk gezegd nog nooit gehoord van lean. Lean is dus een agile
+                                    methode waarin de productiestappen voor een product continu aangepast wordt op
+                                    vraag en feedback vanuit de klant. Hoewel ik dit zelf waarschijnlijk niet ga
+                                    toepassen vond ik het interresant om mij te verdiepen in andere methodes.
+                                    Daarnaast vond ik het werken met sticky notes binnen het bedrijfsproces erg
+                                    herkenbaar. Aangezien ik dit soort informatie normaal gesproken op een digitaal
+                                    scrum-bord zou hebben staan (zie ook hieronder een afbeelding hiervan). Aan het
+                                    einde van de rondleiding hebben we nog een opdracht gekregen om de volgende
+                                    vraag te beantwoorden: “Maak een plan hoe wij smart industry kunnen inzetten om
+                                    een snelle analyse te maken om geschikte locaties te vinden om wijken te
+                                    verdichten met transformeerwoningen en de optopper.”. Hiervoor heb ik samen in
+                                    een groep een plan opgesteld voor een dashboard die door middel van api’s van
+                                    het kadaster, rijksoverheid, openstreetmap en het CBS-informatie kan opvragen
+                                    zoals type woning, energielabel, woningwaarde etc. om zo geschikte wijken te
+                                    vinden zonder dat iemand dit geheel handmatig uit moest zoeken. Natuurlijk zou
+                                    Elk dan wel een geschikt softwarebedrijf moeten vinden die dit voor hun uit zou
+                                    kunnen voeren. Vervolgens hebben we dit plan gepresenteerd aan het bedrijf en de
+                                    andere groepen d.m.v een powerpoint. En dit was blijkbaar wel van kwaliteit,
+                                    want ons plan bleek ook volgens de mensen van Elk het beste plan te zijn.
+                                </p>
+                            </blockquote>
                         </div>
                     </div>
                 </div>
