Update front page and project

--- a/Portfolio-Nena-Renting.html
+++ b/Portfolio-Nena-Renting.html
@@ -406,120 +406,6 @@
                                 Dit heb ik na het feedbackmoment geprobeerd toe te passen door eerst de inhoudelijke informatie te documenteren, waarna ik later pas de vormgeving heb toegepast. Ook heb ik tijdens de pitstop geprobeerd luider te praten en wat vaker in te vallen wanneer een vraag werd gesteld en heb ik op sommige momenten mijn taak wat kleiner gemaakt, zodat ik het allemaal wel op tijd af zou kunnen krijgen.
                                 </p>
                             </blockquote>
-                            <!-- <div class="small-info-box" width="2500" height="3500">
-                                    <table>
-                                        <tr>
-                                            <th></th>
-                                            <th colspan="2">Camiel Nijman</th>
-                                            <th colspan="2">Nathan van der Veer</th>
-                                        </tr>
-                                        <tr>
-                                            <th></th>
-                                            <th>TOP (aan de hand van concrete voorbeelden)</th>
-                                            <th>TIP</th>
-                                            <th>TOP (aan de hand van concrete voorbeelden)</th>
-                                            <th>TIP</th>
-                                        </tr>
-                                        <tr>
-                                            <td class="row-header">Je toont veel initiatief en betrokkenheid
-                                            </td>
-                                            <td>
-                                            Je bent altijd op tijd. Als je eerder weg gaat haal je het in  door eerder te beginnen.
-                                            </td>
-                                            <td></td>
-                                            <td>
-                                            Helemaal mee eens, je pakt zelf taken op en brengt ook eigen doelen in, dat is belangrijk.
-                                            </td>
-                                            <td>
-                                            Hou dit vol!
-                                            </td>
-                                        </tr>
-                                        <tr>
-                                            <td class="row-header">Jouw meningen en adviezen zijn gebaseerd op gedegen onderzoek
-                                            </td>
-                                            <td>
-                                            Je houd goed bij wat er verteld is tijden de lessen en wijst aan als we nog wat vergeten zijn. Bijvoorbeeld het businessmodel canvas.    
-                                            </td>
-                                            <td></td>
-                                            <td>
-                                            Van wat ik gemerkt heb goed, je ondersteund gevonden informatie met bronnen en weet tijdens gesprekken te benoemen waar de informatie is terug te vinden. Je draagt ook zorg bij het goed vermelden van de bronnen in het verslag
-                                            </td>
-                                            <td></td>
-                                        </tr>
-                                        <tr>
-                                            <td class="row-header">Je kiest/ hebt ambitieuze leerdoel en verkent disciplines buiten jouw eigen vakgebied
-                                            </td>
-                                            <td>
-                                            Je bent druk bezig met je leerdoelen omtrent programmeren en 3d-printen. Concreet voorbeeld: De website en de minion.
-                                            </td>
-                                            <td>
-                                            Je wilt best veel tegelijkertijd uitwerken en toevoegen wat mogelijk een valkuil kan zijn.
-                                            </td>
-                                            <td>
-                                            Je hebt bewust gekozen voor meer practische en technische leerdoelen zoals bv. 3D ontwerpen. Ik heb gezien dat je kansen pakt om hiermee toe oefenen.
-                                            </td>
-                                            <td>
-                                            Als je ergens niet uit komt met de technische leerdoelen kan ik daar mischien mee helpen, tips geven (maar dat deet je al XD). tot zover goed bezig!
-                                            </td>
-                                        </tr>
-                                        <tr>
-                                            <td class="row-header">Je bent bewust bezig met je persoonlijke/ professionele groei
-                                            </td>
-                                            <td>
-                                            Zie leerdoel en zelfreflectie.
-                                            </td>
-                                            <td></td>
-                                            <td>
-                                            Ik heb gezien dat je ook op communicatief en proffessioneel vlak actief probeert te groeien. Bv. tijdens bedrijfsgesprekken/contact opnemen en in maken/plannen van doelen.
-                                            </td>
-                                            <td>
-                                            Je zou wat vaker op de voorgrond mogen treden tijdens overlegmomenten. Wat ik zie kan je best goed proffesioneel communiceren.
-                                            </td>
-                                        </tr>
-                                        <tr>
-                                            <td class="row-header">Je gebruikt feedback en zelfreflectie om je persoonlijk/professioneel te ontwikkelen
-                                            </td>
-                                            <td>
-                                            Je gebruikte feedback die je bij elk kreeg bij de pitstop (ook al ging vervolgens de feedback die we kregen in strijd met die van elk)
-                                            </td>
-                                            <td>
-                                            Je praat bij presentaties soms nogal zacht.
-                                            </td>
-                                            <td>
-                                            Tijdens projectwerk help je ons niet alleen met eigen kennis maar laat je ook zien dat je open taat voor andermans aanpak, methodieken of kennis.
-                                            </td>
-                                            <td></td>
-                                        </tr>
-                                        <tr>
-                                            <td class="row-header">Je help actief anderen groeien
-                                            </td>
-                                            <td>
-                                            Je gaf actief aan dat ik mij misschien wat meer moet focussen op de business kant gezien mijn leerdoelen.
-                                            </td>
-                                            <td></td>
-                                            <td>
-                                            Je deelt je kennis met teamleden en helpt ons nieuwe inzichten en aanpak toe te kunnen passen. zoals je kennis over database en rest API's
-                                            </td>
-                                            <td></td>
-                                        </tr>
-                                        <tr>
-                                            <td class="row-header">Jouw sterkte vind ik ....
-                                            </td>
-                                            <td>
-                                            Consequent te werk gaan.
-                                            </td>
-                                            <td>
-                                            Soms ga je misschien iets te veel in op de vormgeving.
-                                            </td>
-                                            <td>
-                                            Creativiteit en zorgvuldigheid vind ik een paar van jouw sterktes. Dit zorgd voor proffessioneel hoogstaande resultaten en vormgeving van het rapport.
-                                            </td>
-                                            <td>
-                                            Zou een valkuil kunnen zijn wanneer eerst invulling aan een projectdoel gegeven moet worden voordat het uiterlijk netjes hoeft/kan. Maar dit is nog niet echt voor gekomen tot zover.
-                                            </td>
-                                        </tr>
-                                    </table>
-                            </div> -->
                         </div>
                         <div class="box-onlytext">
                             <h6>Smart Future (Jos Sanders)</h6>
@@ -562,9 +448,7 @@
                             <h6>Business Model Canvas</h6>
                         </div>
                         <div class="box-lowerimg">
-                            <!-- <iframe src="https://hannl.sharepoint.com/teams/AOO-BK-MSI-2023-2024-S2/_layouts/15/Doc.aspx?sourcedoc={822396e0-1232-44b2-9768-f06818d22fe5}&amp;action=embedview&amp;wdAr=1.7777777777777777&amp;wdEaaCheck=0" width="560px" height="315px" frameborder="0">Dit is een ingesloten <a target="_blank" href="https://office.com">Microsoft Office</a>-presentatiebestand dat mogelijk is gemaakt met <a target="_blank" href="https://office.com/webapps">Office</a>.</iframe> -->
-                            <!-- <object data="images/NenaR/ELK.pdf" type="application/pdf" width="600" height="400"></object> -->
-                            <!-- <iframe src="images/NenaR/ELK.pdf" name></iframe> -->
+                            <object class="pdf" data="docs/NenaR/ELK" width="1200" height="500"></object>
                             <h6>ELK</h6>
                             <blockquote>
                                 <p>
