--- a/Portfolio-Project.html
+++ b/Portfolio-Project.html
@@ -29,9 +29,8 @@
                         <ul class="sub-level">
                             <li><a href="#resultaten-projectplan">Projectplan</a></li>
                             <li><a href="#resultaten-onderzoeksrapport">Onderzoeksrapport</a></li>
-                            <li><a href="#resultaten-aanbeveling-businesscase">Aanbeveling & Businesscase</a></li>
-                            <li><a href="#resultaten-simulatie-digital-twin">Simulatie & Digital Twin</a></li>
                             <li><a href="#resultaten-pitstops">Pitstops</a></li>
+                            <li><a href="#resultaten-eindpresentatie">Eindpresentatie</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -63,7 +62,9 @@
             <h1>About project</h1>
             <div class="content">
                 <div class="column-content">
-                    <div class="box-onlytext">
+                    <div class="box-leftimg">
+                        <img src="images/ImpactIot/netcongestie-scaled.jpg" height="250px"
+                        width="250px">
                         <h6>Het project</h6>
                         <blockquote>
                             <p>
@@ -106,23 +107,48 @@
             <h1>Resultaten</h1>
             <section id="resultaten-projectplan">
                 <h3>Projectplan</h3>
-                <object class="pdf" data="docs/impactIot/Projectplan.pdf" width="1200" height="1000"></object>
+                <div class="content">
+                    <div class="column-content">
+                        <div class="box-onlytext" style="width: 100%;">
+                            <object class="pdf" data="docs/impactIot/Projectplan.pdf" width="1200" height="1000"></object>
+                        </div>
+                    </div>
+                </div>
             </section>
             <section id="resultaten-onderzoeksrapport">
                 <h3>Onderzoeksrapport</h3>
-                <object class="pdf" data="docs/impactIot/Onderzoeksrapport.pdf" width="1200" height="1000"></object>
-            </section>
-            <section id="resultaten-aanbeveling-businesscase">
-                <h3>Aanbeveling & Businesscase</h3>
-                <p>hoi</p>
-            </section>
-            <section id="resultaten-simulatie-digital-twin">
-                <h3>Simulatie & Digital Twin</h3>
-                <p>hoi</p>
+                <div class="content">
+                    <div class="column-content">
+                        <div class="box-onlytext" style="width: 100%;">
+                            <object class="pdf" data="docs/impactIot/Onderzoeksrapport.pdf" width="1200" height="1000"></object>
+                        </div>
+                    </div>
+                </div>
             </section>
             <section id="resultaten-pitstops">
                 <h3>Pitstops</h3>
-                <p>hoi</p>
+                <div class="content">
+                    <div class="column-content">
+                        <div class="box-onlytext" style="width: 100%;">
+                            <h6>Pitstop 1 (3 april 2024)</h6>
+                            <object class="pdf" data="docs/impactIot/Pitstop_1.pdf" width="1200" height="1000"></object>
+                        </div>
+                        <div class="box-onlytext" style="width: 100%;">
+                            <h6>Pitstop 2 (29 mei 2024)</h6>
+                            <object class="pdf" data="docs/impactIot/Pitstop_2.pdf" width="1200" height="1000"></object>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section id="resultaten-eindpresentatie">
+                <h3>Eindpresentatie</h3>
+                <div class="content">
+                    <div class="column-content">
+                        <div class="box-onlytext" style="width: 100%;">
+                            <object class="pdf" data="docs/impactIot/Eindpresentatie.pdf" width="1200" height="1000"></object>
+                        </div>
+                    </div>
+                </div>
             </section>
         </section>
     </div>
