--- a/Portfolio-Camiel-Nijman.html
+++ b/Portfolio-Camiel-Nijman.html
@@ -182,26 +182,146 @@
             <section id="competenties-initiatief">
                 <h3>Initiatief</h3>
                 <div class="content"></div>
+                <div class="column-content">
+                    <div class="box-onlytext">
+                        <h6>Je toont veel initiatief en betrokkenheid</h6>
+                        <blockquote>
+                            <p>
+                                Ik heb mijn initiatief bewezen door op tijd aanwezig te zijn en actief mee te doen met
+                                de workshops en het project. Ik heb aan alle huiswerkopdrachten en presentaties gewerkt
+                                en ben aanwezig geweest bij alle lessen zo ver als mogelijk was. Ditzelfde gelde ook
+                                voor het project waarbij ik vaak open stond voor vragen. Daarnaast had ik ook genoeg
+                                inbreng en dit kreeg ik ook terug, want vanuit Nathan kreeg ik over dit punt het
+                                volgende te horen: “Dit heb ik gemerkt aan je houding tijdens het project, je bent
+                                actief tijdens het projcect bezig en pakt ook lekker door bij uitvoeren van taken.” Als
+                                concreet voorbeeld van mijn inzet heb ik geprobeerd OpenEMS Edge op een Raspberry Pi te
+                                draaien aangezien Pieter graag wou weten of dit kon. Helaas bleken de raspberry pi’s die
+                                op dat moment beschikbaar waren te oud te zijn. Dus heb ik het thuis op mijn eigen
+                                Raspberry Pi 4 uitgeprobeerd. Toen ik tussentijds keek naar de resultaten die ik en mijn
+                                teamgenoten boekten t.o.v. de hoeveelheid inzet die ervoor benodigd was maakte ik mij
+                                toch wel zorgen, maar toen we eenmaal het onderzoeksrapport af hadden ben ik zeker
+                                tevreden met het resultaat.
+                            </p>
+                        </blockquote>
+                    </div>
             </section>
             <section id="competenties-meningen-adviezen">
                 <h3>Meningen & Adviezen</h3>
                 <div class="content"></div>
+                <div class="column-content">
+                    <div class="box-onlytext">
+                        <h6>Jouw meningen en adviezen zijn gebaseerd op gedegen onderzoek</h6>
+                        <blockquote>
+                            <p>
+                                Tijdens het project heb ik concreet gewerkt aan de juridische excepties voor het
+                                oprichten van een energiegemeenschap van mkb’ers. Hiervoor heb ik de huidige
+                                elektriciteitswet van 1998, het voorstel voor de nieuwe energiewet en regelgeving vanuit
+                                het ACM doorgenomen. Vervolgens heb ik deze resultaten ook meerdere keren met Cezar
+                                doorgenomen. Uit de resultaten heb ik een aantal excepties gevonden en een aanbeveling
+                                voor een strategie om een energiegemeenschap op te zetten. Daarnaast heb ik gekeken naar
+                                hoe een wet van begin tot eind gerealiseerd wordt om een advies te kunnen geven over
+                                wanneer de nieuwe energiewet ingaat en wat deze mogelijk gaat brengen. En om
+                                duidelijkheid te krijgen rondom welke EMS-optie het beste was heb ik meegeholpen aan het
+                                opzetten van een PVE (plan van eisen) om de opties te vergelijken.
+                            </p>
+                        </blockquote>
+                    </div>
             </section>
             <section id="competenties-ambitie">
                 <h3>Ambitie</h3>
                 <div class="content"></div>
+                <div class="column-content">
+                    <div class="box-onlytext">
+                        <h6>Je kiest/ hebt ambitieuze leerdoel en verkent disciplines buiten jouw eigen vakgebied</h6>
+                        <blockquote>
+                            <p>
+                                Zoals ik hierboven al aangeef heb ik veel gewerkt aan het juridische aspect wat normaal
+                                gesproken eigenlijk niet aan bod komt. Op zijn hoogst zou ik misschien doornemen wat er
+                                in de licentie staat van een library voor een sensor om erachter te komen of ik deze in
+                                opdracht voor een bedrijf mocht gebruiken. Daarnaast is mijn tweede leerdoel vrijwel
+                                letterlijk het verkennen van een disciplines buiten mijn eigen vakgebied. Ik heb
+                                namelijk tijdens de workshops kennis opgedaan over andere werkmethodieken, maar ook werk
+                                vervult wat normaal gesproken iemand met een bedrijfskundige achtergrond zou vervullen.
+                                Ik heb namelijk met hulp van Nena het BMC voor Impact Smart Solutions opgesteld waaruit
+                                te halen is wat er precies moet veranderen binnen het bedrijf om onze slimme toepassing
+                                daadwerkelijk uit te voeren. Daarnaast heb ik ook met hulp van Nena een SWOT-analyse
+                                opgesteld.
+                            </p>
+                        </blockquote>
+                    </div>
             </section>
             <section id="competenties-bewustheid">
                 <h3>Bewustheid</h3>
                 <div class="content"></div>
+                <div class="column-content">
+                    <div class="box-onlytext">
+                        <h6>Je bent bewust bezig met je persoonlijke/ professionele groei</h6>
+                        <blockquote>
+                            <p>
+                                Ik heb van tevoren leerdoelen uitgewerkt om als einddoel zowel mijn kennis te verbreden
+                                en efficiënter te werken. Hierin vind ik dat redelijk geslaagd ben gezien de progressie
+                                die ik onder mijn leerdoelen toelicht. Daarnaast heb ik ook veel geleert door de
+                                vrijheid die Pieter ons gaf in de opdracht. Een goed voorbeeld hiervan was het opstellen
+                                van een plan bestaande uit meerdere opties als je vragen hebt voor een opdrachtgever.
+                                Wij zaten voornamelijk te stoeien met hoe we duidelijkheid konden krijgen over wat
+                                Pieter nou precies van ons verwachtte. Aangezien we de eerste keer met zo’n gesprek met
+                                Pieter toch niet de verduidelijking hadden die we wilden hebben we toen een plan met
+                                concrete opties opgezet voor Pieter. Dit hielp enorm doordat Pieter hierbij een beter
+                                beeld kreeg van wat wij ongeveer wouden uitvoeren i.p.v dat hij het moest verzinnen.
+                            </p>
+                        </blockquote>
+                    </div>
             </section>
             <section id="competenties-feedback-zelfreflectie">
                 <h3>Feedback & Zelfreflectie</h3>
                 <div class="content"></div>
+                <div class="column-content">
+                    <div class="box-onlytext">
+                        <h6>Je gebruikt feedback en zelfreflectie om je persoonlijk/professioneel te ontwikkelen</h6>
+                        <blockquote>
+                            <p>
+                                Ik heb tijdens het project om de zoveel tijd gevraagd of ik daadwerkelijk progressie
+                                maakte bij mijn leerdoelen. Hierbij heb ik aan het einde van Nena te horen gekregen dat
+                                met het werk dat ik verricht heb zeker aan mijn tweede leerdoel voldeed en van beide dat
+                                ze opmerkten dat ik meer initiatief nam bij contact opnemen met andere partijen. Volgens
+                                het feedbackformulier: “Je vraagt regelmatig feedback aan ons over hoe je een mail heb
+                                opgezet, over hoe jij communiceert met de stakeholders of over de onderdelen waar je aan
+                                hebt gewerkt. De feedback die je krijgt, neem je daarna mee in het volgende contactpunt
+                                of in je werk”.
+                            </p>
+                        </blockquote>
+                    </div>
             </section>
             <section id="competenties-actief-helpen">
                 <h3>Actief helpen</h3>
                 <div class="content"></div>
+                <div class="column-content">
+                    <div class="box-onlytext">
+                        <h6>Je help actief anderen groeien</h6>
+                        <blockquote>
+                            <p>
+                                Aangezien mijn lichting HBO-ICT is bezit ik vooral expertise over het technische
+                                gedeelte van de opdracht. Ik heb Nathan en Nena geholpen met de requirements door een
+                                usecase diagram op te zetten in uml en de use cases in dit diagram volledig uit te
+                                werken. Deze uitwerking heb ik vervolgens ook toegelicht. Daarnaast heb ik ook OpenEMS
+                                opgezet voor mijzelf en een middag gespendeerd om Nathan en Nena te helpen met het
+                                installeren van OpenEMS op hun pc. Ik probeer ook zoveel mogelijk over te brengen aan
+                                mijn teamgenoten zodat zij ook inzicht krijgen in hoe ik als programmeur normaal te werk
+                                ga. Hierbij moet je denken aan uitleg over hoe je correct werkt met git
+                                (branchstructuur, pull requests etc.), een korte uitleg over object georiënteerd
+                                programmeren of algemeen hulp met het programmeren van de ESP-32. Allerlaatst heb ik ook
+                                feedback gegeven aan mijn teamgenoten met behulp van het feedback formulier.
+                                <br><br>
+                                Ik heb ook diverse voorstellen, ideeën en oplossingen aangedragen voor de minor en het
+                                project. Voor de minor zelf heb ik ook feedback gegeven op hoe de IoT en AI-workshop
+                                verbeterd kan worden zodat de mensen van bedrijfskunde makkelijker mee kunnen doen en er
+                                hopelijk ook iets meer inzicht wordt gegeven in het programmeren. En bij het project
+                                zelf heb ik aan Pieter verschillende opties voorgedragen zoals het opzetten van een
+                                onderzoek naar meetsensoren en het creëren van een demo waarin twee verschillende
+                                edge-instanties zichtbaar zouden zijn.
+                            </p>
+                        </blockquote>
+                    </div>
             </section>
         </section>
         <section id="workshops">
@@ -379,8 +499,8 @@
                                     met usb verbind aan mijn laptop beter vast kan zetten.
                                     <br><br>
                                     Als laatst heb ik ook een leermoment gehad op proces niveau namelijk dat als ik
-                                    ergens vastloop waar iemand vanuit een andere richting veel meer over weet ik niet
-                                    bang moet zijn om hulp te vragen.
+                                    op een onderwerp vastloop waar iemand vanuit een andere richting veel meer over weet
+                                    ik niet bang moet zijn om hulp te vragen.
                                 </p>
                             </blockquote>
                         </div>
